# pybasics

./: .gitignore  README.md  panda.ipynb  pyproject.toml  tasks.pkl
data/: data.csv
src/: lists.py  panda.py  pizza_bot.py  pybasics.py  test.py  todo.py  tuple.py
